# discord-forwarder

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  WORKFLOW.md  pyproject.toml
.github/workflows/: ci.yml
bot/: config.py  main.py  store.py  translation.py
bot/adapters/: base.py  wechat.py
bot/commands/: follow.py  forward.py
tests/: test_config.py  test_store.py  test_translation.py
tests/adapters/: test_wechat.py
tests/commands/: test_follow.py  test_forward.py
